testsuite/poke.pkl/break-diag-1.pk
/* { dg-do compile } */

fun foo = void:
  {
   break;  /* { dg-error "" } */
  }
